--- a/settings.json
+++ b/settings.json
@@ -1,14 +1,14 @@
 {
   "bot-account": {
-    "username": "bot",
+    "username": "BOT HİZMETİ 1",
     "password": "",
     "type": "mojang"
   },
 
   "server": {
-    "ip": "localhost",
+    "ip": "193.164.7.11",
     "port": 25565,
-    "version": "1.17.1"
+    "version": "1.19"
   },
 
   "position": {
@@ -20,13 +20,13 @@
 
   "utils": {
     "auto-auth": {
-      "enabled": false,
-      "password": "12345678"
+      "enabled": true,
+      "password": "lanetmtf"
     },
 
     "anti-afk": {
-      "enabled": false,
-      "sneak": false
+      "enabled": true,
+      "sneak": true
     },
 
     "chat-messages": {
@@ -35,10 +35,7 @@
       "repeat-delay": 60,
 
       "messages": [
-        "I'm a regular player ",
-        "My owner is urFate_ ",
-        "I want be alone ",
-        "Visit my GitHub page! (urFate/Afk-Bot)"
+        "Ben Bir Robotum. bip bap bob"
       ]
     },
 
