--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "bot-account": {
-    "username": "BOT HİZMETİ 1",
+    "username": "bot hizmeti 1",
     "password": "",
     "type": "mojang"
   },
