--- a/settings.json
+++ b/settings.json
@@ -21,7 +21,7 @@
   "utils": {
     "auto-auth": {
       "enabled": true,
-      "password": "lanetmtf"
+      "password": "daşşağınıyiuuu"
     },
 
     "anti-afk": {
